[package]
name = "arduino-volume-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
memchr = "2.4.1"
# dialog = "0.3.0"
msgbox = "0.7.0"
log = "0.4"
tracing = "0.1.37"
clap = { version = "4.0.29", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
tracing-error = "0.2.0"
windows = { version = "0.48.0", features = [
    "Win32",
    "Media",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
] }
tokio = { version = "1.27.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
